[gd_scene load_steps=39 format=2]

[ext_resource path="res://Enemies/Astronaut.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle.gd" type="Script" id=2]
[ext_resource path="res://Assets/Background.png" type="Texture" id=3]
[ext_resource path="res://default_theme.tres" type="Theme" id=4]
[ext_resource path="res://PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://big_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://StatsPanel.gd" type="Script" id=7]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Alien.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/HomeIconPressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/HomeIcon.png" type="Texture" id=12]
[ext_resource path="res://Assets/HomeIconHover.png" type="Texture" id=13]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://HoverInfo.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/MuteButtonPressed.png" type="Texture" id=16]
[ext_resource path="res://Assets/MuteButton.png" type="Texture" id=17]
[ext_resource path="res://Assets/MuteButtonHover.png" type="Texture" id=18]
[ext_resource path="res://Assets/ColorblindButton.png" type="Texture" id=19]
[ext_resource path="res://Assets/ColorblindButtonHover.png" type="Texture" id=20]
[ext_resource path="res://Assets/ColorblindButtonPressed.png" type="Texture" id=21]
[ext_resource path="res://Textbox.gd" type="Script" id=22]
[ext_resource path="res://EndScreen.gd" type="Script" id=23]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 26, 26 )

[sub_resource type="Animation" id=14]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node2D"]
script = ExtResource( 2 )
enemies = [ ExtResource( 10 ), ExtResource( 1 ) ]

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 3 )

[node name="ColorblindFilter" type="ColorRect" parent="."]
visible = false
margin_right = 231.0
margin_bottom = 180.0
color = Color( 0.207843, 0.0627451, 0.498039, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorblindFilter"]
margin_left = 233.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.996078, 0.109804, 0.109804, 1 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 116, 99 )

[node name="Astronaut" parent="EnemyPosition" instance=ExtResource( 1 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_left = 34.0
margin_top = 66.0
margin_right = 202.0
margin_bottom = 132.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 36.0
margin_top = 24.0
margin_right = 132.0
margin_bottom = 42.0
rect_min_size = Vector2( 70, 13 )
custom_fonts/font = ExtResource( 6 )
text = "Next Battle!"

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = 4.0
margin_top = 4.0
margin_right = 228.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 45.0
size_flags_vertical = 3
theme = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 14 )
custom_styles/normal = SubResource( 4 )
text = "An enemy approaches!!"
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 34.0
margin_top = 140.0
margin_right = 197.0
margin_bottom = 178.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
margin_left = 6.0
margin_top = 4.0
margin_right = 157.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "HP
25"
align = 1

[node name="HoverInfo" parent="UI/StatsPanel/StatsContainer/HP" instance=ExtResource( 15 )]
anchor_left = 0.213
anchor_top = -0.13
anchor_right = 0.213
anchor_bottom = -0.13
margin_left = -0.0110006
margin_top = -0.00999975
margin_right = 23.989
margin_bottom = 29.99
description = "Health Points

Don't let this reach zero, use healing when available!"

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 51.0
margin_top = 3.0
margin_right = 99.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
text = "AP
3"
align = 1

[node name="HoverInfo2" parent="UI/StatsPanel/StatsContainer/AP" instance=ExtResource( 15 )]
anchor_left = 0.208
anchor_top = -0.13
anchor_right = 0.208
anchor_bottom = -0.13
margin_left = 1.016
margin_top = -0.00999975
margin_right = 25.016
margin_bottom = 29.99
description = "Action Points

Amount of actions per turn, when they run out the enemy gets a turn!"

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 103.0
margin_top = 3.0
margin_right = 151.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "MP
10"
align = 1

[node name="HoverInfo3" parent="UI/StatsPanel/StatsContainer/MP" instance=ExtResource( 15 )]
anchor_left = 0.208
anchor_top = -0.13
anchor_right = 0.208
anchor_bottom = -0.13
margin_left = 1.016
margin_top = -0.00999975
margin_right = 25.016
margin_bottom = 29.99
description = "Magic Points

Allow you to preform special moves. Refills when attacking an enemy."

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 235.0
margin_top = 56.0
margin_right = 318.0
margin_bottom = 176.0
custom_constants/vseparation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_top = 30.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 24 )

[node name="QuestionButtons" type="ScrollContainer" parent="UI"]
margin_left = 235.0
margin_top = 56.0
margin_right = 318.0
margin_bottom = 176.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QButtonContainer" type="VBoxContainer" parent="UI/QuestionButtons"]

[node name="ColorButton" type="Button" parent="UI"]
margin_left = 235.0
margin_top = 4.0
margin_right = 261.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverInfo" parent="UI/ColorButton" instance=ExtResource( 15 )]
mouse_filter = 1
description = "Blue-Yellow Button

Applies a filter over the game for Blue-Yellow Colorblindness :)"

[node name="MuteButton" type="Button" parent="UI"]
margin_left = 264.0
margin_top = 4.0
margin_right = 290.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverInfo" parent="UI/MuteButton" instance=ExtResource( 15 )]
mouse_filter = 1
description = "Mute Button

Mute audio"

[node name="HomeButton" type="Button" parent="UI"]
margin_left = 292.0
margin_top = 4.0
margin_right = 318.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverInfo" parent="UI/HomeButton" instance=ExtResource( 15 )]
mouse_filter = 1
description = "Home Button

Returns you to the main menu without saving any progress!"

[node name="EndScreen" type="Popup" parent="UI"]
margin_left = 8.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 136.0
script = ExtResource( 23 )

[node name="Panel" type="Panel" parent="UI/EndScreen"]
margin_right = 216.0
margin_bottom = 112.0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/EndScreen"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 14 )
text = "Default text"

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 14 )
anims/FadeOut = SubResource( 15 )
anims/FadeToNewRoom = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="end_game" from="PlayerStats" to="." method="_on_PlayerStats_end_game"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="pressed" from="UI/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="pressed" from="UI/HomeButton" to="." method="_on_HomeButton_pressed"]
